Fixed z-index issue

--- a/resources/sass/layout.scss
+++ b/resources/sass/layout.scss
@@ -10,12 +10,8 @@
   padding-top: 80px
 }
 
-#wrapper {
-  z-index: -9999;
-}
-
 .ease-in-out {
-  transition: padding-left 0.3s ease-in-out;
+  transition: padding-left 0.17s ease-in-out;
 }
 
 @media screen and (min-width: 768px) {
